--- a/README
+++ b/README
@@ -4,9 +4,9 @@ Reads 81 whitespace-delimited symbols from standard input, each a digit [1-9]
 or a placeholder. If the input represents a solvable sudoku then the solution
 is printed to standard output.
 
-$ sh build.sh  # xach.com/lisp/buildapp
+$ sh build.sh
 
-$ cat puzzle2
+$ cat Inkala-2012
 8 - - - - - - - -
 - - 3 6 - - - - -
 - 7 - - 9 - 2 - -
@@ -17,7 +17,7 @@ $ cat puzzle2
 - - 8 5 - - - 1 -
 - 9 - - - - 4 - -
 
-$ ./solve-sudoku <puzzle2
+$ ./solve-sudoku <Inkala-2012
 8 1 2 7 5 3 6 4 9
 9 4 3 6 8 2 1 7 5
 6 7 5 4 9 1 2 8 3
